2006-10-04  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Scheduler/NSCalendarDate+Scheduler.m ([NSCalendarDate
	-shortDateString]): new method that will return a "short date
	string" (yyyymmdd) from a calendar date object.

	* UI/SOGoUI/UIxComponent.m ([UIxComponent
	-_cDateFromShortDateString:dateStringandShortTimeString:timeString]): new method to compute the selected date from the "day" and "hm" query parameters (if found). This method replaces the old algorithm that was found in the "selectedDate" method.

	* Main/sogod.m (main): initialize the NSTimeZone's defaultTimeZone
	to the value of SOGoServerTimeZone or "Canada/Eastern" if not found.

2006-10-03  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/WebServerResources/SchedulerUI.js: added code to scroll the
	view of the day at the height of hour 8:00.

	* UI/Scheduler/UIxCalView.m ([UIxCalView -dayStartHour]): returns 0.
	([UIxCalView -dayEndHour]): returns 24.

	* UI/Contacts/UIxContactFoldersView.m ([UIxContactFoldersView -defaultAction]) 
	([UIxContactFoldersView -newAction]): invoke
	_selectActionForApplication: on self with the proper attribute too.

	* UI/Contacts/UIxContactsSelectionViewContainer.m: removed since
	we now use the action mechanism in UIxContactsListView to keep the
	same view for the contact selectors and the regular contact view.

	* UI/Contacts/UIxContactsListViewContainer.[hm]: replaces
	UIxContactsListViewContainerBase.[hm]

	* UI/Contacts/UIxContactsListView.[hm]: replaces UIxContactsListViewBase.[hm]

	* UI/WebServerResources/generic.js: generalized emailstring
	handling functions. Generalized address book access functions.

	* UI/Contacts/UIxContactsListViewBase.m ([UIxContactsListViewBase
	-isPopup]): return YES if the "popup" query parameter is set.

	* UI/Contacts/UIxContactFoldersView.m ([UIxContactFoldersView
	-defaultAction]): keep the url parameters when redirecting.
	([UIxContactFoldersView -selectForSchedulerAction]) 