@@ -1,4 +1,4 @@
-/* NSCalendarDate+Scheduler.m - this file is part of SOGo
+/* NSCalendarDate+SOGo.m - this file is part of SOGo
    Copyright (C) 2000-2004 SKYRIX Software AG
 
    This file is part of OGo
@@ -21,9 +21,73 @@
 
 #import <NGExtensions/NSCalendarDate+misc.h>
 
-#import "NSCalendarDate+Scheduler.h"
+#import "NSCalendarDate+SOGo.h"
 
-@implementation NSCalendarDate (SchedulerExtensions)
+@implementation NSCalendarDate (SOGoExtensions)
+
++ (id) dateFromShortDateString: (NSString *) dateString
+            andShortTimeString: (NSString *) timeString
+                    inTimeZone: (NSTimeZone *) timeZone
+{
+  unsigned int year, month, day, hour, minute, total;
+  NSCalendarDate *cDate, *tmpDate;
+
+  if (dateString && [dateString length] == 8)
+    {
+      total = [dateString intValue];
+      year = total / 10000;
+      total -= year * 10000;
+      month = total / 100;
+      day = total - (month * 100);
+    }
+  else
+    {
+      tmpDate = [NSCalendarDate calendarDate];
+      tmpDate = [tmpDate addYear: 0 month: 0 day: 0 hour: 0 minute: 0
+                         second: [timeZone secondsFromGMT]];
+      year = [tmpDate yearOfCommonEra];
+      month = [tmpDate monthOfYear];
+      day = [tmpDate dayOfMonth];
+    }
+
+  if (timeString && [timeString length] == 4)
+    {
+      total = [timeString intValue];
+      hour = total / 100;
+      minute = total - (hour * 100);
+    }
+  else
+    {
+      hour = 12;
+      minute = 0;
+    }
+
+  cDate = [self dateWithYear: year month: month day: day
+                hour: hour minute: minute second: 0
+                timeZone: timeZone];
+
+  return [cDate adjustedDate];
+}
+
+- (NSCalendarDate *) adjustedDate
+{
+  NSTimeZone *dTZ;
+
+  dTZ = [self timeZone];
+
+  return [self addYear: 0 month: 0 day: 0 hour: 0 minute: 0
+               second: -[dTZ secondsFromGMT]];
+}
+
+- (NSCalendarDate *) driftedDate
+{
+  NSTimeZone *dTZ;
+
+  dTZ = [self timeZone];
+
+  return [self addYear: 0 month: 0 day: 0 hour: 0 minute: 0
+               second: [dTZ secondsFromGMT]];
+}
 
 - (BOOL) isDateInSameMonth: (NSCalendarDate *) _other
 {
